--- a/.gitconfig
+++ b/.gitconfig
@@ -18,3 +18,8 @@
    amend = commit --amend
    aa = add --all
    fa = fetch --all
+   st = status
+   aa = add --all
+   l = log --graph --abbrev-commit --date=relative
+[format]
+   pretty=format:%C(yellow)%h%Creset -%C(red)%d%Creset %s %Cgreen(%ar) %C(bold blue)<%an>%Creset
