--- a/.gitconfig
+++ b/.gitconfig
@@ -5,21 +5,54 @@
 	whitespace = nowarn
 [github]
 	user = dublinan
-	token = editme
+	token = 1d02930d73ced1e01262111bde6cd790
 [color]
-   ui = auto
+    ui = auto
+[color "branch"]
+    current = cyan reverse
+    local = yellow
+    remote = green
+[color "diff"]
+    meta = yellow bold
+    frag = magenta bold
+    old = red bold
+    new = green bold
+[color "status"]
+    added = yellow
+    changed = green
+    untracked = cyan
 [alias]
-   co = checkout
-   p = push
-   pl = pull
-   ci = commit
-   di = diff
-   dc = diff --cached
-   amend = commit --amend
-   aa = add --all
-   fa = fetch --all
-   st = status
-   aa = add --all
-   l = log --graph --abbrev-commit --date=relative
+    co = checkout
+    pom = push origin master
+    pullff = pull --ff
+    ci = commit
+    di = diff
+    dc = diff --cached
+    amend = commit --amend
+    aa = add --all
+    fa = fetch --all
+    st = status -vb
+    aa = add --all
+    sdiff = diff --staged
+    cdiff = diff --cached
+    hist = log --pretty=format:\"%h %ad | %s%d [%cn]\" -p -2 --graph --date=short
+    remote = remote -v 
+    br = branch
+    cp = cherry-pick
+    mergeff = merge --ff
+    tag = tag -a
+    add = add -u
 [format]
-   pretty=format:%C(yellow)%h%Creset -%C(red)%d%Creset %s %Cgreen(%ar) %C(bold blue)<%an>%Creset
+    pretty=format:%C(yellow)%h%Creset -%C(red)%d%Creset %s %Cgreen(%ar) %C(bold blue)<%an>%Creset
+[core]
+    editor = mvim
+    excludesfile = ~/.gitignore_global
+    quotepath = false
+[push]
+    # 'git push' should only do the current branch, not all
+    default = current
+[branch]
+    # always setup 'git pull' to rebase instead of merge
+    autosetuprebase = always
+[mergetool]
+    keepBackup = true
