--- a/.rvmrc
+++ b/.rvmrc
@@ -1,6 +1,6 @@
 # Source a .rvmrc file in a directory after changing to it, if it exists.
 # To disable this fature, set in root/home .rvmrc file:
-rvm_project_rvmrc=0
+export rvm_project_rvmrc=1
 
 # Automatically trust project .rvmrc files
 #
