logd alias to log files deleted with detailed summary
Signed-off-by: Andre Dublin <81dublin@gmail.com>

--- a/.gitconfig
+++ b/.gitconfig
@@ -26,6 +26,7 @@
     pom = push origin master
     pullff = pull --ff
     ci = commit
+    logd = log --diff-filter=D --summary
     di = diff
     dc = diff --cached
     amend = commit --amend
