--- a/.gitconfig
+++ b/.gitconfig
@@ -40,6 +40,7 @@
     remote = remote --verbose
     br = branch -a
     bv = branch -avv
+    bd = branch -D
     cp = cherry-pick
     mergeff = merge --ff
     merged = branch --merged
