--- a/.ackrc
+++ b/.ackrc
@@ -1,9 +1,7 @@
 # == blank lines freak out ack on Windows? ==
 #
---type-add=ruby=.haml,.rake,.rsel,.builder,.jbuilder
---type-add=html=.erb,.haml,.tmpl,.spark,.slim
---type-set=spark=.spark
---type-set=slim=.slim
+--type-add=ruby=.haml,.rake
+--type-add=html=.erb,.haml,.tmpl
 --type-add=js=.coffee,.js.erb
 --type-set=coffee=.coffee
 --type-add=css=.scss,.sass,.less
