--- a/.gitconfig
+++ b/.gitconfig
@@ -54,6 +54,7 @@
 [core]
     excludesfile = ~/.gitignore_global
     quotepath = false
+    editor = vim
 [push]
     # 'git push' should only do the current branch, not all
     default = current
