bind vi and osx keys, improve UI
Signed-off-by: Andre Dublin <81dublin@gmail.com>

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,8 +7,13 @@ set -g history-limit 5000
 # use vim key bindings
 setw -g mode-keys vi
 
-# disable mouse
-setw -g mode-mouse off
+# use mouse most of the time
+setw -g mode-mouse on
+
+# except this time
+set -g mouse-select-pane off
+set -g mouse-resize-pane off
+set -g mouse-select-window off
 
 # decrease command delay (increases vim responsiveness)
 set -sg escape-time 1
@@ -16,10 +21,10 @@ set -sg escape-time 1
 # increase repeat time for repeatable commands
 set -g repeat-time 1000
 
-# start window index at 1
+# start window indexes at 1
 set -g base-index 1
 
-# start pane index at 1
+# start pane indexes at 1
 setw -g pane-base-index 1
 
 ###########################
@@ -45,6 +50,36 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+# maximizing panes
+unbind Up
+bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
+unbind Down
+bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
+
+# joining panes
+bind-key s command-prompt -p "send pant to:" "join-pane -t '%%'"
+
+# moving among panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# osx keyboard
+set -g default-command "which reattach-to-user-namespace && reattach-to-user-namespace -1 $SHELL || $SHELL"
+
+# osx copying
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+
+# vi keys
+setw -g mode-keys vi
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'V' begin-selection
+bind -t vi-copy 'y' copy-selection
 
 # create 25% lower split
 unbind t
@@ -78,6 +113,9 @@ set -g visual-activity on
 # color status bar
 set -g status-bg colour235
 set -g status-fg white
+setw -g window-status-fg cyan
+setw -g window-status-bg default
+setw -g window-status-attr dim
 
 # show session, window, pane in status bar
 set -g status-left-length 40
@@ -88,11 +126,17 @@ set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M\
  #[fg=red]#(battery discharging)#[default]#(battery charging)'
 
 # highlight current window
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg green
+setw -g window-status-current-fg white
+setw -g window-status-current-bg red
+setw -g window-status-current-attr bright
 
 # set color of active pane
-set -g pane-border-fg colour235
+set -g pane-border-fg green
 set -g pane-border-bg black
-set -g pane-active-border-fg green
+set -g pane-active-border-fg white
 set -g pane-active-border-bg black
+
+# set color color of messages
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
