play nice with windows
Signed-off-by: Andre Dublin <81dublin@gmail.com>

--- a/.gitconfig
+++ b/.gitconfig
@@ -56,6 +56,7 @@
     excludesfile = ~/.gitignore_global
     quotepath = false
     editor = vim
+    autocrlf = input
 [push]
     # 'git push' should only do the current branch, not all
     default = current
